# security-review-automation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/security_reviewer/: cli.py  reviewer.py
tests/: test_reviewer.py
